# ECSTemplate

./: .gitignore  CMakeLists.txt  main.cpp
include/Components/: Collision.hpp  Input.hpp  LifeSpan.hpp  Score.hpp  Shape.hpp  Transform.hpp
include/Creepy/: Config.hpp  Entity.hpp  EntityManager.hpp  EntityType.hpp  Game.hpp
src/Creepy/: Entity.cpp  EntityManager.cpp  Game.cpp
